flux/monitoring/test-server/deployment.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: test-server
spec:
  selector:
    matchLabels:
      app: test-server
  template:
    metadata:
      labels:
        app: test-server
    spec:
      containers:
        - name: test-server
          image: python:3-alpine
          command:
          - /bin/sh
          - -c
          - |
            [...]
          ports:
            - containerPort: 8080
