flux/monitoring/test-server/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: test-server
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`test.home`)
      kind: Rule
      services:
        - name: test-server
          port: 80
    - match: Host(`test.arlodev.co.uk`)
      kind: Rule
      services:
        - name: test-server
          port: 80
